Implementacion de responsive en Complejos

--- a/src/app/components/serv-home/serv-home.component.css
+++ b/src/app/components/serv-home/serv-home.component.css
@@ -1,90 +1,7 @@
 /*Servicios Home */
-.servicios-home{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
-}
-
-.servicios-home h3{
-    grid-column: 1 / 3;
-    margin-bottom: 5px;
-}
-.serv-home-text{grid-column: 1 / 2;}
-
-.serv-home-img{
-    grid-column: 2 / 3;
-    height: 310px;
-}
-
-
-
-@media(max-width: 600px){
-    /* .servicios-home h3{
-        border-style: none;
-    }
-
-    .serv-home-img{
-        grid-column: 1 / 3;
-    }
-
-    .serv-home-text{
-        grid-column: 1 /3;
-        padding: 25px;
-    }
-
-    .serv-home-text ul{
-        background-color: #120201;
-        opacity: .85;
-        width: 90%;
-        margin: auto;
-        text-align: center;
-        list-style: none;
-        font-weight: bold;
-    }
-
-    .serv-home-img {
-        position: relative;
-        top: -300px;
-        margin-bottom: -300px;
-        z-index: -1;
-    }*/
-} 
 
 @media(max-width: 550px){
-    /* .serv-home-text li{
-        font-size: .8em;
-    } */
-
-    .servicios-home{
-        display: block;
-    }
-
-    .serv-home-img{
-        display: none;
-    }
-
-    .serv-home-text{
+    .serv-list-container{
         background-image: url(../../../assets/images/serv-home.jpg);
-        background-size: cover;
-        background-origin: content-box;
-        background-repeat: no-repeat;
-        padding: 5px;
-        border: 2px solid var(--main-color-text);
-    }
-
-    .servicios-home h3{
-        border-style: none;
-        margin-bottom: 0;
-    }
-
-    .serv-home-text ul{
-        background-image: none;
-        border-style: none;
-        font-weight:500;
-        background-color: #120201d8;
-        margin: 20px auto;
-        list-style: none;
-        text-align: center;
-        width: 80%;
     }
 }
