--- a/src/app/components/serv-home/serv-home.component.html
+++ b/src/app/components/serv-home/serv-home.component.html
@@ -1,9 +1,9 @@
-<section class="servicios-home">
+<section class="servicios-home serv-list">
     <h3 class="subheader subrayed">
         Te ofrecemos...
     </h3>
-    <div class="serv-home-text">
-        <ul class="serv-home-text normalize-list normalize-text">
+    <div class="serv-list-container">
+        <ul class="normalize-list normalize-text">
             <li>Wifi - SmartTV - Netflix - DirectTV.</li>
             <li>Ropa Blanca (Sabanas y Toallas).</li>
             <li>Cochera Cubierta.</li>
@@ -15,7 +15,7 @@
             <li>Microondas - Heladera - Anafe.</li>
         </ul>
     </div>
-    <div class="serv-home-img">
+    <div class="serv-list-img">
         <div class="border">
             <div class="container-img">
                 <img src="../../../assets/images/serv-home.jpg" alt="balcon">
