--- a/src/app/components/sobre-nosotros/sobre-nosotros.component.html
+++ b/src/app/components/sobre-nosotros/sobre-nosotros.component.html
@@ -5,21 +5,27 @@
             <img src="../../../assets/images/sobre-nosotros.jpg" alt="ventanal">
         </div>
     </div>
-    <!-- <div class="s-nosotros-p"> -->
-    <p class="s-nosotros-p1">Aquí me quedo es un pequeño complejo turístico ubicado en la mejor zona de Mina
-        Clavero, a 100m del hermoso Balneario Los Elefantes, 200m de la terminal de ómnibus, y a 300m de la zona
-        comercial donde encontraras restaurantes, supermercados, bancos, bares, entre muchas otras atracciones.
-        Ideal para dejar tu vehículo estacionado y recorrer caminando sin hacer grandes distancias.</p>
-    <p class="s-nosotros-p2">Nuestro complejo se compone de 2 hermosas cabañas de encantador diseño rustico en
-        troncos, tejas y ladrillo visto, equipadas para 4 a 5 personas y una espectacular casa preparada para 8
-        personas con jardín, asador y patio privado.</p>
-    <p class="s-nosotros-p3">En el espacio compartido encontraras un hermoso parque con asadores, huerta
-        orgánica, jardín de cactus, y una espectacular piscina de 3,5 x 7m.</p>
-    <p class="s-nosotros-p4">Todas nuestras unidades cuentan con calefacción, parrilla, servicio de mucama
-        (opcional), cochera cubierta, vajilla completa, heladera, microondas, cocina con horno y la tranquilidad
-        de ser atendidas por su propia dueña.</p>
-
-    <!-- </div> -->
-    
+    <p>
+        <span class="s-nosotros-p1">
+            Aquí me quedo es un pequeño complejo turístico ubicado en la mejor zona de Mina
+            Clavero, a 100m del hermoso Balneario Los Elefantes, 200m de la terminal de ómnibus, y a 300m de la zona
+            comercial donde encontraras restaurantes, supermercados, bancos, bares, entre muchas otras atracciones.
+            Ideal para dejar tu vehículo estacionado y recorrer caminando sin hacer grandes distancias.
+        </span>
+        <span class="s-nosotros-p2">
+            Nuestro complejo se compone de 2 hermosas cabañas de encantador diseño rustico en
+            troncos, tejas y ladrillo visto, equipadas para 4 a 5 personas y una espectacular casa preparada para 8
+            personas con jardín, asador y patio privado.
+        </span>
+        <span class="s-nosotros-p3">
+            En el espacio compartido encontraras un hermoso parque con asadores, huerta
+            orgánica, jardín de cactus, y una espectacular piscina de 3,5 x 7m.
+        </span>
+        <span class="s-nosotros-p4">
+            Todas nuestras unidades cuentan con calefacción, parrilla, servicio de mucama
+            (opcional), cochera cubierta, vajilla completa, heladera, microondas, cocina con horno y la tranquilidad
+            de ser atendidas por su propia dueña.
+        </span>
+    </p>
 
 </section>
