--- a/src/app/components/tipologias/tipologias.component.html
+++ b/src/app/components/tipologias/tipologias.component.html
@@ -1,4 +1,4 @@
-<section class="tipologias normalize-text grid">
+<!-- <section class="tipologias normalize-text grid">
     <div class="border tipo-cab-img">
         <div class="container-img">
             <img src="../../../assets/images/tipologias/cabaña.jpg" alt="Planta baja de la cabaña">
@@ -40,4 +40,57 @@
                 alt="Fachada de la casa">
             </div>
     </div>
+</section> -->
+
+<section class="tipologias">
+    <article class="serv-list tipo-cabana">
+        <h3 class="subheader subrayed">Tipologia de Cabañas - 4/5 Pers.</h3>
+        <div class="serv-list-img">
+            <div class="border">
+                <div class="container-img">
+                    <img src="../../../assets/images/tipologias/cabaña.jpg" alt="Planta baja de la cabaña">
+                </div>
+            </div>
+        </div>  
+        <div class="serv-list-container">
+            <ul class="normalize-list normalize-text">
+                <li>Smart TV - Netflix - DirectTV en sala.</li>
+                <li>Salida independiente a la calle.</li>
+                <li>Cocina - Comedor.</li>
+                <li>Hab. Matrimonial en 2da planta</li>
+                <li>2/3 camas individuales en sala.</li>
+                <li>Salida independiente al parque</li>
+                <li>Ventilador de pie y techo</li>
+                <li>Calefaccion a leña</li>
+                <li>Cochera cubierta con porton</li>
+            </ul>
+        </div> 
+    </article>
+   
+    <article class="serv-list tipo-casa">
+        <h3 class="subheader subrayed">Tipologia de Casa - 6/8 Pers.</h3>
+        <div class="serv-list-container">
+            <ul class="normalize-list normalize-text">
+                <li>Smart TV - Netflix - DirectTV en sala.</li>
+                <li>Comedor - Sala de estar.</li>
+                <li>Cocina - Totalmente equipada.</li>
+                <li>2 Hab. Matrimoniales.</li>
+                <li>4 camas individuales.</li>
+                <li>Jardin privado.</li>
+                <li>Ventilador de pie y techo.</li>
+                <li>Calefaccion a leña.</li>
+                <li>Microondas - Heladera - Horno.</li>
+                <li>Cochera cubierta con porton.</li>
+            </ul>
+        </div>
+        <div class="serv-list-img">
+            <div class="border">
+                <div class="container-img">
+                    <img src="../../../assets/images/tipologias/casa.jpg"
+                        alt="Fachada de la casa">
+                </div>
+            </div>
+        </div>
+    </article>
 </section>
+
