--- a/src/app/components/galeria-parque/galeria-parque.component.html
+++ b/src/app/components/galeria-parque/galeria-parque.component.html
@@ -1,5 +1,5 @@
 <section class="parque">
-    <div class="separador center">
+    <div class="separador">
         <img src="../../../assets/images/separador.png" class="separador-izq" alt="adorno de separacion"
             srcset="../../../assets/images/separador.svg">
         <h3 class="subheader">Parque</h3>
@@ -7,7 +7,7 @@
             srcset="../../../assets/images/separador.svg">
     </div>
 
-    <div class="galeria-parque grid">
+    <div class="galeria-parque">
         <div class="slider-thumb thumb-a">
             <div class="border">
                 <div class="container-img">
