--- a/src/app/components/maps/maps.component.html
+++ b/src/app/components/maps/maps.component.html
@@ -2,13 +2,9 @@
     <h3 class="subheader">Te esperamos aqui...</h3>
     <div class="border">
         <div class="container-img">
-            <!-- <div class="google-maps"></div> -->
-            <google-map
-                width="750px"
-                height="450px"
-                [center]="center"
-                [zoom]="zoom"
-            ></google-map>
+            <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom"> 
+                <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+              </agm-map>
         </div>
     </div>
 </section>
