--- a/src/app/components/ref-geo/ref-geo.component.html
+++ b/src/app/components/ref-geo/ref-geo.component.html
@@ -1,32 +1,48 @@
-<section class="ubicacion-terminal">
-    <h3 class="subheader subrayed">A solo 200m de la terminal de Omnibus</h3>
-    <p class="normalize-text">
-        Desde la terminal de ómnibus podrás encontrar colectivos de la linea Panaholma, Sarmiento y Sierra Bus, que recorren todo el largo del valle desde Villa Cura Brochero hasta Villa Dolores con una frecuencia de no mas de 20 minutos. Ideal para desconectarse y salir a conocer otros hermosos paisajes como los ríos de Nono, o la famosa feria de artesanos de Villa de las Rosas.
-    </p>
-    <div class="border">
-        <div class="container-img"><img src="../../../assets/images/las-rosas.jpg" alt="Villa de las Rosas"></div>
-    </div>
-</section>
+<section class="ref-geo normalize-text">
+    
 
-<section class="ubicacion-balneario grid normalize-text">
-    <h3 class="subheader subrayed">A solo 100m del Balneario Los Elefantes</h3>
-    <p>
-        A solo una cuadra del complejo, encontraras uno de los balnearios mas hermosos de mina clavero. Desde zona de clavadistas con profundas ollas (para los mas experimentados) hasta amplias playas de rio poco profundo para que jueguen los mas pequeñitos.
-        Podrás disfrutar del acceso gratuito, impresionantes vistas panorámicas, sombras para ir a pasar la tarde, estacionamiento y baños. Ideal para un día de picnic, o ir a tomar unos mates por la tarde. <br>
-        PD: No te pierdas los atardeceres!
-    </p>
-    <div class="border container-img">
-        <img src="../../../assets/images/los elefantes.jpg" alt="Balneario Los Elefantes">
-    </div>
-</section>
-
-<section class="ubicacion-centro grid normalize-text">
-    <h3 class="subheader subrayed">A solo 300m del Centro Comercial de Mina Clavero</h3>
-    <div class="border container-img">
-        <img src="../../../assets/images/feria.jpg" alt="Feria Mina Clavero">
-    </div>
-    <p>
-        Con solo unos pocos pasos encontraras la Av. Mitre, y con solo cruzar el puente colgante, la Av. San Martin, ambas calles principales que conectan Mina Clavero de punta a punta.
-        Podrás recorrer el centro a pie sobre una peatonal encontrando supermercados, bancos, restaurantes, heladerías, bares, música en vivo, espectáculos callejeros, circos independientes, clubs bailables, feria de artesanos, regionales, locales de ropa y calzado entre otras muchas atracciones mas.
-    </p>
+    <article class="ref ref-terminal">
+        <h3 class="subheader subrayed">A solo 200m de la terminal de Omnibus <fa-icon [icon]="faAngleRight"></fa-icon></h3>
+        <div class="ref-content">
+            <p>
+                Desde la terminal de ómnibus podrás encontrar colectivos de la linea Panaholma, Sarmiento y Sierra Bus, que recorren todo el largo del valle desde Villa Cura Brochero hasta Villa Dolores con una frecuencia de no mas de 20 minutos. Ideal para desconectarse y salir a conocer otros hermosos paisajes como los ríos de Nono, o la famosa feria de artesanos de Villa de las Rosas.
+            </p>
+            <div class="ref-img border">
+                <div class="container-img">
+                    <img src="../../../assets/images/las-rosas.jpg" alt="Villa de las Rosas">
+                </div>
+            </div>
+        </div>
+    </article>
+    
+    <article class="ref ref-balneario ">
+        <h3 class="subheader subrayed">A solo 100m del Balneario Los Elefantes <fa-icon [icon]="faAngleRight"></fa-icon></h3>
+        <div class="ref-content grid">
+            <p>
+                A solo una cuadra del complejo, encontraras uno de los balnearios mas hermosos de mina clavero. Desde zona de clavadistas con profundas ollas (para los mas experimentados) hasta amplias playas de rio poco profundo para que jueguen los mas pequeñitos.
+                Podrás disfrutar del acceso gratuito, impresionantes vistas panorámicas, sombras para ir a pasar la tarde, estacionamiento y baños. Ideal para un día de picnic, o ir a tomar unos mates por la tarde. <br>
+                PD: No te pierdas los atardeceres!
+            </p>
+            <div class="ref-img border">
+                <div class="container-img">
+                    <img src="../../../assets/images/los elefantes.jpg" alt="Balneario Los Elefantes">
+                </div>
+            </div>
+        </div>
+    </article>
+    
+    <article class="ref ref-centro ">
+        <h3 class="subheader subrayed">A solo 300m del Centro Comercial <fa-icon [icon]="faAngleRight"></fa-icon></h3>
+        <div class="ref-content grid">
+            <div class="ref-img border">
+                <div class="container-img">
+                    <img src="../../../assets/images/feria.jpg" alt="Feria Mina Clavero">
+                </div>
+            </div>
+            <p>
+                Con solo unos pocos pasos encontraras la Av. Mitre, y con solo cruzar el puente colgante, la Av. San Martin, ambas calles principales que conectan Mina Clavero de punta a punta.
+                Podrás recorrer el centro a pie sobre una peatonal encontrando supermercados, bancos, restaurantes, heladerías, bares, música en vivo, espectáculos callejeros, circos independientes, clubs bailables, feria de artesanos, regionales, locales de ropa y calzado entre otras muchas atracciones mas.
+            </p>
+        </div>
+    </article>
 </section>
