--- a/src/app/components/slider-home/slider-home.component.css
+++ b/src/app/components/slider-home/slider-home.component.css
@@ -1,6 +1,6 @@
 /*Slider - Home CSS*/
 
-#slider-home{
+/* #slider-home{
     margin-top: var(--margin-top-components);
 }
 
@@ -10,6 +10,7 @@
 
 .slider-thumb{
     height:100px;
+    cursor:pointer;
 }
 
 .thumbs{
@@ -43,4 +44,92 @@
 
 @media(max-width: 450px){
     
+} */
+
+.slider-home{
+    display: block;
+    height: 500px;
+    width: 500px;
+    padding: 2em;
 }
+
+:host {
+    flex: 1;
+}
+  
+  .carousel {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 0.5em;
+  }
+  
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+     /* zoom effect on hover */
+    transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+    border-radius: 0.5em;
+  }
+  
+  .slide:hover {
+    transform: scale(1.025);
+  }
+  
+   /* 
+        =========================
+        Next and Prev buttons
+        ========================= 
+   */
+  .control {
+    border: none;
+    background-color: transparent;
+    outline: 0;  /* remove blue outline border, but make sure they are still focussable for accessibility */
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5em;
+    color: white;
+    font-weight: bold;
+    font-size: 3em;
+    user-select: none;
+    height: 100%;
+    opacity: 80%;
+    /* opacity effect on hover */
+    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+  }
+
+    .control:hover, .control:focus {
+        opacity: 1;
+    }
+
+    /* Position the buttons */
+    .control.next {
+        right: 0;
+    }
+    .control.prev {
+        left: 0;
+    }
+  
+  /* style the arrows */
+  .arrow {
+    display: block;
+    border-left: 0.1em solid white;
+    border-bottom: 0.1em solid white;
+    width: 0.5em;
+    height: 0.5em;
+  }
+
+  .arrow.left {
+    transform: rotate(45deg);
+  }
+  .arrow.right {
+    transform: rotate(225deg);
+  }
