--- a/src/app/components/slider-home/slider-home.component.css
+++ b/src/app/components/slider-home/slider-home.component.css
@@ -47,89 +47,143 @@
 } */
 
 .slider-home{
-    display: block;
-    height: 500px;
-    width: 500px;
-    padding: 2em;
+  display: block;
+  /* height: 320px; */
+  width: 100%;
 }
 
-:host {
-    flex: 1;
+.slider-main{
+  height: 320px;
 }
-  
-  .carousel {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 0.5em;
-  }
-  
-  .slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-     /* zoom effect on hover */
-    transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-    border-radius: 0.5em;
-  }
-  
-  .slide:hover {
-    transform: scale(1.025);
-  }
-  
-   /* 
-        =========================
-        Next and Prev buttons
-        ========================= 
-   */
-  .control {
-    border: none;
-    background-color: transparent;
-    outline: 0;  /* remove blue outline border, but make sure they are still focussable for accessibility */
-    position: absolute;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0.5em;
-    color: white;
-    font-weight: bold;
-    font-size: 3em;
-    user-select: none;
-    height: 100%;
-    opacity: 80%;
-    /* opacity effect on hover */
-    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-  }
 
-    .control:hover, .control:focus {
-        opacity: 1;
+.carousel {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+  /* 
+      =========================
+      Next and Prev buttons
+      ========================= 
+  */
+.control {
+  border: none;
+  background-color: transparent;
+  outline: 0;  /* remove blue outline border, but make sure they are still focussable for accessibility */
+  position: absolute;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.5em;
+  color: var(--main-color-text);
+  font-weight: bold;
+  font-size: 2em;
+  user-select: none;
+  height: 100%;
+  transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+}
+
+.control:hover, .control:focus {
+  opacity: 1;
+}
+
+/* Position the buttons */
+.control.next {
+  right: -60px;
+}
+.control.prev {
+  left: -60px;
+}
+
+/* Thumbs */
+
+.slider-thumb{
+  height:100px;
+  cursor:pointer;
+}
+
+.thumbs{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-top: 15px;
+}
+
+/* nav-mobile */
+.nav-mobile{
+  display: none;
+  margin-top: 15px;
+}
+
+.nav-mobile ul{
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.nav-mobile li{
+  content: " ";
+  border: 2px solid var(--main-color-text);
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  list-style: none;
+  cursor: pointer;
+}
+
+.nav-slide-active{
+  background-color: var(--main-color-text);
+  width: 100%;
+  height: 100%;
+}
+
+
+
+@media(max-width: 900px){
+    .slider-thumb{
+        height: 90px;
+    }
+}
+
+@media(max-width: 700px){
+    .slider-thumb{
+        height: 80px;
+    }
+}
+
+@media(max-width: 600px){
+    .slider-main{
+        height: 200px;
     }
 
-    /* Position the buttons */
-    .control.next {
-        right: 0;
+    .slider-main button{
+      width: 30%;
     }
-    .control.prev {
-        left: 0;
-    }
-  
-  /* style the arrows */
-  .arrow {
-    display: block;
-    border-left: 0.1em solid white;
-    border-bottom: 0.1em solid white;
-    width: 0.5em;
-    height: 0.5em;
-  }
 
-  .arrow.left {
-    transform: rotate(45deg);
-  }
-  .arrow.right {
-    transform: rotate(225deg);
-  }
+    .slider-main button fa-icon,
+    .thumbs{
+      display: none;
+    }
+
+    .nav-mobile{
+      display: block;
+    }
+
+    .nav-slide-mobile{
+      display: block;
+    }
+}
+
