--- a/src/app/components/slider-home/slider-home.component.html
+++ b/src/app/components/slider-home/slider-home.component.html
@@ -1,62 +1,36 @@
-<!-- <section id="slider-home">
-    <div class="slider-main-img" #sliderMain>
-        <div class="border">
-            <div class="container-img">
-                <img src="../../../assets/images/slider-home/img1.jpg" alt="fachada">
-            </div>
+
+<div class="slider-home">
+    <div class="slider-main border">
+        <div class="carousel">
+            <ng-container *ngFor="let slide of slides; let i = index">
+                <img [src]="slide.src" alt="{{slide.alt}}" class="slide" *ngIf="i === currentSlide" @carouselAnimation />
+            </ng-container>
+
+            <!-- controls -->
+            <button class="control prev" (click)="onPreviousClick()">
+                <fa-icon [icon]="faAngleLeft"></fa-icon>
+            </button>
+            <button class="control next" (click)="onNextClick()">
+                <fa-icon [icon]="faAngleRight"></fa-icon>
+            </button>
         </div>
     </div>
 
     <div class="thumbs">
-        <div class="slider-thumb" (click)="slideTo($event)">
+        <div class="slider-thumb" *ngFor="let thumb of slidesThumbs; let i = index; trackBy: trackByItems" (click)="slideTo(thumb.id, i)">
             <div class="border">
                 <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img2.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb" (click)="slideTo($event)"> 
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img3.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb" (click)="slideTo($event)">
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img4.jpg" alt="habitacion">
-                </div>
-            </div>
-        </div>
-        <div class="slider-thumb" (click)="slideTo($event)">
-            <div class="border">
-                <div class="container-img">
-                    <img src="../../../assets/images/slider-home/img5.jpg" alt="habitacion">
+                    <img [src]="thumb.src" alt="{{thumb.alt}}"/>
                 </div>
             </div>
         </div>
     </div>
-</section>
- -->
 
-<div class="slider-home">
-    <div class="carousel">
-        <ng-container *ngFor="let slide of slides; let i = index">
-            <img 
-                [src]="slide.src" 
-                class= "slide" 
-                *ngIf="i === currentSlide"
-                @carouselAnimation
-            />
-        </ng-container>
-    
-        <!-- controls -->
-        <button class="control prev" (click)="onPreviousClick()">
-            <span class="arrow left"></span>
-        </button>
-        <button class="control next" (click)="onNextClick()">
-            <span class="arrow right"></span>
-        </button>
+    <div class="nav-mobile">
+        <ul>
+            <li *ngFor="let nav of slides; let i = index" (click)="slideToMobile(i)">
+                <div *ngIf="i === currentSlide" class="nav-slide-active"></div>
+            </li>
+        </ul>
     </div>
 </div>
