--- a/src/app/components/consultar/consultar.component.css
+++ b/src/app/components/consultar/consultar.component.css
@@ -20,6 +20,10 @@
     align-items: center;
 }
 
+.consultar .form-group label{
+    cursor: pointer;
+}
+
 .consultar .form-group fa-icon{
     margin-left: 5px;
 }
@@ -27,8 +31,9 @@
 .consultar .form-group input{
     visibility: hidden;
     position: relative;
-    top: -22px;
+    bottom: -5px;
     width: 0;
+    left: -26px;
 }
 
 .consultar form button[type="submit"]{
@@ -43,11 +48,42 @@
    cursor: pointer;
 }
 
+.input-select {
+    display: flex;
+  }
+
+  .input-select fa-icon{
+      display: flex;
+  }
+    
+  .input-select select {
+      color: var(--main-color-text);
+      border: none;
+      box-shadow: none;
+      background-color: transparent;
+      background-image: none;
+      appearance: none;
+      font-size: 1em;
+      cursor:pointer;
+      outline: 0;
+      text-align: center;
+  }
+
+  .select-ninos select{ width: 60px;}
+
+  .input-select option{
+      background-color: var(--light-degraded);
+      border-bottom: 1px solid var(--main-color-text);
+  }
+
 @media(max-width: 700px){
     .consultar form,
+    .input-select select,
     .consultar form button[type="submit"]{
         font-size: 14px;
     }
+
+    .select-ninos select{ width: 50px;}
 
     .consultar form button[type="submit"]{
         width: 30%;
@@ -59,18 +95,6 @@
 }
 
 @media(max-width: 600px){
-    /* .consultar form,
-    .consultar form button[type="submit"]{
-        font-size: 13px;
-    } */
-
-    .consultar form button[type="submit"]{
-        padding: 5px;
-    }
-}
-
-
-@media(max-width: 450px){
     .consultar form{
         flex-wrap: wrap;
     }
@@ -88,5 +112,26 @@
 
     .consultar .subheader{
         font-size: 20px;
+    }
+
+    .input-select fa-icon{
+        margin-left: 0;
+    }
+}
+
+@media(max-width: 460px){
+    .consultar form .border{
+        flex-wrap: wrap;
+    }
+
+    .consultar form .form-group{
+        width: 50%;
+        padding: 5px;
+        /* justify-content: left; */
+    }
+
+    .input-select select{
+        text-align: left;
+        margin-left: -5px;
     }
 }
